// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TaxesPopover/> render() should render with checked checkbox because we charge taxes 1`] = `
<div>
  <Button
    className="p-0 focusable"
    color="link"
    disabled={false}
    id="taxes"
    innerRef={[Function]}
    onClick={[Function]}
    tabIndex={0}
    tag="button"
    type="button"
  >
    <strong>
      Taxes
    </strong>
  </Button>
  <Popover
    delay={
      Object {
        "hide": 0,
        "show": 0,
      }
    }
    hideArrow={false}
    isOpen={false}
    placement="bottom"
    placementPrefix="bs-popover"
    target="taxes"
    toggle={[Function]}
  >
    <Form
      onKeyDown={[Function]}
      onSubmit={[Function]}
      tag="form"
    >
      <PopoverBody
        className="pt-3"
        tag="div"
      >
        <p
          className="legend"
        >
          Taxes are automatically calculated.
        </p>
        <FormGroup
          check={true}
          className="mt-1 mb-3"
          tag="div"
        >
          <Label
            check={true}
            tag="label"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <Input
              checked={true}
              innerRef={[Function]}
              onChange={[Function]}
              tabIndex={0}
              type="checkbox"
            />
            <span
              className="ml-1"
            >
              Charge taxes
            </span>
          </Label>
        </FormGroup>
      </PopoverBody>
      <hr
        className="mb-0"
      />
      <PopoverBody
        className="d-flex"
        tag="div"
      >
        <Button
          className="focusable"
          color="secondary"
          onClick={[Function]}
          tabIndex={0}
          tag="button"
          type="button"
        >
          Close
        </Button>
        <Button
          className="ml-auto focusable"
          color="primary"
          tabIndex={0}
          tag="button"
          type="submit"
        >
          Apply
        </Button>
      </PopoverBody>
    </Form>
  </Popover>
</div>
`;

exports[`<TaxesPopover/> render() should render with unchecked checkbox because we do not charge taxes 1`] = `
<div>
  <Button
    className="p-0 focusable"
    color="link"
    disabled={false}
    id="taxes"
    innerRef={[Function]}
    onClick={[Function]}
    tabIndex={0}
    tag="button"
    type="button"
  >
    <strong>
      Taxes
    </strong>
  </Button>
  <Popover
    delay={
      Object {
        "hide": 0,
        "show": 0,
      }
    }
    hideArrow={false}
    isOpen={false}
    placement="bottom"
    placementPrefix="bs-popover"
    target="taxes"
    toggle={[Function]}
  >
    <Form
      onKeyDown={[Function]}
      onSubmit={[Function]}
      tag="form"
    >
      <PopoverBody
        className="pt-3"
        tag="div"
      >
        <p
          className="legend"
        >
          Taxes are automatically calculated.
        </p>
        <FormGroup
          check={true}
          className="mt-1 mb-3"
          tag="div"
        >
          <Label
            check={true}
            tag="label"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <Input
              checked={false}
              innerRef={[Function]}
              onChange={[Function]}
              tabIndex={0}
              type="checkbox"
            />
            <span
              className="ml-1"
            >
              Charge taxes
            </span>
          </Label>
        </FormGroup>
      </PopoverBody>
      <hr
        className="mb-0"
      />
      <PopoverBody
        className="d-flex"
        tag="div"
      >
        <Button
          className="focusable"
          color="secondary"
          onClick={[Function]}
          tabIndex={0}
          tag="button"
          type="button"
        >
          Close
        </Button>
        <Button
          className="ml-auto focusable"
          color="primary"
          tabIndex={0}
          tag="button"
          type="submit"
        >
          Apply
        </Button>
      </PopoverBody>
    </Form>
  </Popover>
</div>
`;
